--- a/YourCourses/Views/Courses/Create.cshtml
+++ b/YourCourses/Views/Courses/Create.cshtml
@@ -14,7 +14,17 @@
 <script src="~/Scripts/bootstrap.min.js"></script>
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
 <link rel="stylesheet" href="~/Content/bootstrap.css">
-
+<style>
+    textarea {
+        resize: both;
+        overflow: auto; /* Horizontal and vertical scrollbar*/
+        overflow-y: scroll;
+        height: 300px;
+        width: 800px;
+        max-width: 1200px;
+        overflow-x: scroll;
+    }
+</style>
 <h2>Create</h2>
 
 @using (Html.BeginForm())
@@ -36,7 +46,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CourseInfo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CourseInfo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.CourseInfo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CourseInfo, "", new { @class = "text-danger" })
             </div>
         </div>
