--- a/YourCourses/Views/Execute/Close.cshtml
+++ b/YourCourses/Views/Execute/Close.cshtml
@@ -1,2 +1,2 @@
 ﻿
-Текущая оценка составляет <br><b><h3>@Session["mark"] баллов</h3></b>
+Текущая оценка составляет <br><b><h3>@Session["mark"] балла(ов)</h3></b>
