--- a/YourCourses/Views/Execute/UpdateMark.cshtml
+++ b/YourCourses/Views/Execute/UpdateMark.cshtml
@@ -6,5 +6,5 @@
 @foreach (var item in Model)
 {
    <p> Текущая оценка составляет </p>
-<p>@item.Mark  @Html.Label("баллов")</p>
+<p>@item.Mark  @Html.Label("балла(ов)")</p>
 }
