--- a/YourCourses/Views/CoursesList/ShowLecture.cshtml
+++ b/YourCourses/Views/CoursesList/ShowLecture.cshtml
@@ -1,6 +1,57 @@
 ﻿@{
     Layout = null;
 }
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    .box {
+        width: 100%;
+        margin: 5px auto;
+        position: relative;
+        background: #ffffff;
+        padding: 5px;
+        border: 1px solid black;
+    }
+
+    .top, .bottom {
+        width: 100%;
+        height: 15px;
+        border: 1px solid black;
+        position: absolute;
+        left: -1px;
+        border-top: none;
+        border-bottom: none;
+    }
+
+    .top {
+        top: -5px;
+    }
+
+    .bottom {
+        bottom: -5px;
+    }
+
+    .left, .right {
+        height: 100%;
+        width: 15px;
+        position: absolute;
+        border: 1px solid black;
+        top: -1px;
+        border-left: none;
+        border-right: none;
+    }
+
+    .left {
+        left: -5px;
+    }
+
+    .right {
+        right: -5px;
+    }
+    </style>
 <script src="~/Scripts/jquery-3.1.1.js"></script>
 <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
 <script src="~/Scripts/codemirror-2.37/lib/codemirror.js"></script>
@@ -11,22 +62,24 @@
 <br>
 <br>
 <h2>@Html.DisplayFor(Model => Model.SubName)</h2>
-@Html.Raw(Model.LectureAdminOutput)
+<div class="box">
+    <p>@Html.Raw(Model.LectureAdminOutput)</p></div>
+    @*@Html.Raw(Model.LectureAdminOutput)*@
 
-<br>
+    <br>
 
-@Ajax.ActionLink("Показать практическую часть ", "ShowPractice", new { id = Model.SubId }, new AjaxOptions { UpdateTargetId = "results2", LoadingElementId = "loading1" },
-    new {@class="btn btn-default btn-lg btn-block"})
-<div role="separator" class="divider"></div>
-<div id="results2"></div>
+    @Ajax.ActionLink("Показать практическую часть ", "ShowPractice", new { id = Model.SubId }, new AjaxOptions { UpdateTargetId = "results2", LoadingElementId = "loading1" },
+    new { @class = "btn btn-default btn-lg btn-block" })
+    <div role="separator" class="divider"></div>
+    <div id="results2"></div>
 
-@*<img id="loading1" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />*@
+    @*<img id="loading1" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />*@
 
-<script>
+    <script>
 
-    var editor = CodeMirror.fromTextArea(document.getElementById("LectureAdminOutput"), {
-        lineNumbers: true,
-        matchBrackets: true,
-        mode: "text/x-csharp"
-    });
-</script> 
+        var editor = CodeMirror.fromTextArea(document.getElementById("LectureAdminOutput"), {
+            lineNumbers: true,
+            matchBrackets: true,
+            mode: "text/x-csharp"
+        });
+    </script>
