--- a/YourCourses/Views/ExecuteChallenge/Index.cshtml
+++ b/YourCourses/Views/ExecuteChallenge/Index.cshtml
@@ -37,6 +37,14 @@
             overflow-y: hidden;
             overflow-x: auto;
         }
+        .box {
+            width: 100%;
+            margin: 5px auto;
+            position: relative;
+            background: #ffffff;
+            padding: 5px;
+            border: 1px solid black;
+        }
     </style>
 
 </head>
@@ -52,94 +60,98 @@
 
 
                 <div class="form-group animated zoomInUp">
+                    <div class="box">
                     @Html.Raw(Session["TEXT"].ToString())
+                        </div>
                     @Html.TextArea("FirstPart", (string)Session["FP"])
                     @Html.Hidden("TEST", (string)Session["TEST"])
                     @*@Html.LabelFor(m => m.CodeBlock)*@
                     @Html.TextAreaFor(model => model.CodeBlock, new { @editable = true, @class = "form-control", rows = 20 })
                     @Html.TextArea("LastPart", (string)Session["LP"])
                 </div>
-                <p class="animated zoomInUp">Ограничение ввода: не более сотни вызовов в час с текущего IP</p>
-                <table  class="table table-bordered animated zoomIn">
-                    <tr>
-                        <p>
-                        <th class="success">Текущий уровень: @Session["startmark"] </th> 
-                        <th class="success"> Общее количество ошибок: @Session["totalFails"]</th> 
-                        <th class="success"> Количество правильных ответов подряд: @Session["countSuccess"] </th>
-                        <th class="success">Количество число ошибок: @Session["countFails"]</th></p>
-</tr>
-                </table>
-                        <button type="button" class="btn btn-success submit animated zoomInUp" data-toggle="modal" data-target="#myModal">Execute</button>
-                if (User.IsInRole("admin"))
-                {
+                <div class="box" style="background-color:burlywood; color:black">
+                    <p class="animated zoomInUp">Ограничение ввода: не более сотни вызовов в час с текущего IP</p>
+                    </div>
+                    <table class="table table-bordered animated zoomIn">
+                        <tr>
+                            <p>
+                            <th class="success">Текущий уровень: @Session["startmark"] </th>
+                            <th class="success"> Общее количество ошибок: @Session["totalFails"]</th>
+                            <th class="success"> Количество правильных ответов подряд: @Session["countSuccess"] </th>
+                            <th class="success">Количество  ошибок: @Session["countFails"]</th></p>
+                        </tr>
+                    </table>
+                    <button type="button" class="btn btn-success submit animated zoomInUp" data-toggle="modal" data-target="#myModal">Execute</button>
+                    if (User.IsInRole("admin"))
+                    {
                     <button type="button" class="btn btn-warning animated zoomInUp" data-toggle="modal" data-target="#myModal1">Показать ответы</button>
-                }
-            }
-            <div class="modal fade" id="myModal1" role="dialog">
-                <div class="modal-dialog">
+                    }
+                    }
+                    <div class="modal fade" id="myModal1" role="dialog">
+                        <div class="modal-dialog">
 
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Решение задачи </h4>
-                        </div>
-                        <div class="modal-body">
-                            <p>
-                                @Html.TextArea("ANS", (string)Session["ans1"], 22, 50, new { @readonly = true })
-                               
-
-
-                            </p>
-                        </div>
-                        <div class="modal-footer">
-
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <br /><br />
-            <div class="modal fade" data-backdrop="static" data-keyboard="false" id="myModal" role="dialog">
-                <div class="modal-dialog">
-
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close"
-                                    onclick="location.href='@Url.Action("Index", "ExecuteChallenge")'"
-                                    data-dismiss="modal">
-                                &times;
-                            </button>
-                            <h4 class="modal-title">Результат выполнения программы </h4>
-                        </div>
-                        <div class="modal-body">
-                            <p>
-                                <div class="alert alert-warning fade">
-                                    <strong><span class="alert-content"></span></strong>
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Решение задачи </h4>
                                 </div>
+                                <div class="modal-body">
+                                    <p>
+                                        @Html.TextArea("ANS", (string)Session["ans1"], 22, 50, new { @readonly = true })
 
-                            </p>
-                        </div>
-                        <div class="modal-footer">
-                            <button id="exec" type="button"
-                                    onclick="location.href='@Url.Action("Index", "ExecuteChallenge")'"
-                                    class="btn btn-default" data-dismiss="modal">
-                                Перейти к следующему заданию
-                            </button>
+
+
+                                    </p>
+                                </div>
+                                <div class="modal-footer">
+
+                                </div>
+                            </div>
 
                         </div>
                     </div>
 
-                    @*<div class="alert alert-warning fade">
-                            <strong><span class="alert-content"></span></strong>
-                        </div>*@
-                </div>
-            </div>
+                    <br /><br />
+                    <div class="modal fade" data-backdrop="static" data-keyboard="false" id="myModal" role="dialog">
+                        <div class="modal-dialog">
 
-            <!-- JS includes -->
-            <script>
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close"
+                                            onclick="location.href='@Url.Action("Index", "ExecuteChallenge")'"
+                                            data-dismiss="modal">
+                                        &times;
+                                    </button>
+                                    <h4 class="modal-title">Результат выполнения программы </h4>
+                                </div>
+                                <div class="modal-body">
+                                    <p>
+                                        <div class="alert alert-warning fade">
+                                            <strong><span class="alert-content"></span></strong>
+                                        </div>
+
+                                    </p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button id="exec" type="button"
+                                            onclick="location.href='@Url.Action("Index", "ExecuteChallenge")'"
+                                            class="btn btn-default" data-dismiss="modal">
+                                        Перейти к следующему заданию
+                                    </button>
+
+                                </div>
+                            </div>
+
+                            @*<div class="alert alert-warning fade">
+                                    <strong><span class="alert-content"></span></strong>
+                                </div>*@
+                        </div>
+                    </div>
+
+                    <!-- JS includes -->
+                    <script>
                 $('#myModal').modal({
                     backdrop: "static",
                     keyboard: false
@@ -152,14 +164,14 @@
 
                     }
                 });
-            </script>
-            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-            <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+                    </script>
+                    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+                    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-            <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
-            <script src="//ajax.aspnetcdn.com/ajax/mvc/4.0/jquery.validate.unobtrusive.min.js"></script>
+                    <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+                    <script src="//ajax.aspnetcdn.com/ajax/mvc/4.0/jquery.validate.unobtrusive.min.js"></script>
 
-            <script type="text/javascript">
+                    <script type="text/javascript">
         var myValue = $('#' + '@(ViewBag.text)').val();
 
 			function openAlert(txt) {
@@ -194,54 +206,54 @@
 
             });
 
-            </script>
-            <script>
+                    </script>
+                    <script>
 
-                //CodeBlock
-                var readOnlyCodeMirror = CodeMirror.fromTextArea(document.getElementById('FirstPart'), {
-                    mode: "text/x-csharp",
-                    theme: "default",
-                    lineNumbers: false,
-                    readOnly: true,
-                    tabSize: 1
+                        //CodeBlock
+                        var readOnlyCodeMirror = CodeMirror.fromTextArea(document.getElementById('FirstPart'), {
+                            mode: "text/x-csharp",
+                            theme: "default",
+                            lineNumbers: false,
+                            readOnly: true,
+                            tabSize: 1
 
-                });
-
-
-                var readOnlyCodeMirror2 = CodeMirror.fromTextArea(document.getElementById('LastPart'), {
-                    mode: "text/x-csharp",
-                    theme: "default",
-                    lineNumbers: false,
-                    readOnly: true
-                });
-                var editor = CodeMirror.fromTextArea(document.getElementById("CodeBlock"), {
-                    lineNumbers: true,
-                    matchBrackets: true,
-                    mode: "text/x-csharp",
-                    compiler: true,
-                    hint: true,
-                    autohint: true,
-                    extraKeys: { "Ctrl-Space": "autocomplete" },
-                    theme: "lesser-dark"
-
-                });
-                function GetVal() {
-                    Session["UI"] = editor.getValue();
-                }
-                var text = editor.getValue();
-
-                $("#exec").click(function () {
-
-                    Session["UI"] = editor.getValue();
-
-                });
-                exec1.onclick = function () {
-                    Session["UI"] = editor.getValue();
+                        });
 
 
-                };
+                        var readOnlyCodeMirror2 = CodeMirror.fromTextArea(document.getElementById('LastPart'), {
+                            mode: "text/x-csharp",
+                            theme: "default",
+                            lineNumbers: false,
+                            readOnly: true
+                        });
+                        var editor = CodeMirror.fromTextArea(document.getElementById("CodeBlock"), {
+                            lineNumbers: true,
+                            matchBrackets: true,
+                            mode: "text/x-csharp",
+                            compiler: true,
+                            hint: true,
+                            autohint: true,
+                            extraKeys: { "Ctrl-Space": "autocomplete" },
+                            theme: "lesser-dark"
 
-            </script>
+                        });
+                        function GetVal() {
+                            Session["UI"] = editor.getValue();
+                        }
+                        var text = editor.getValue();
+
+                        $("#exec").click(function () {
+
+                            Session["UI"] = editor.getValue();
+
+                        });
+                        exec1.onclick = function () {
+                            Session["UI"] = editor.getValue();
+
+
+                        };
+
+                    </script>
 
 </body>
 
