--- a/YourCourses/Views/CorrectAnswers/Create.cshtml
+++ b/YourCourses/Views/CorrectAnswers/Create.cshtml
@@ -14,7 +14,7 @@
         overflow-x: scroll;
     }
 </style>
-<h2>Create</h2>
+<h2>Добавить правильный ответ</h2>
 
 @using (Html.BeginForm()) 
 {
