--- a/YourCourses/Views/CoursesList/Lecture.cshtml
+++ b/YourCourses/Views/CoursesList/Lecture.cshtml
@@ -24,6 +24,36 @@
 
 <hr>
 <style>
+    .panel-heading {
+        color: #fff !important;
+        background-color: #1c1918 !important;
+        padding: 25px;
+        border-bottom: 1px solid transparent;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+    }
+    .navbar {
+        margin-bottom: 0;
+        background-color: #1c1918;
+        z-index: 9999;
+        border: 0;
+        font-size: 12px !important;
+        line-height: 1.42857143 !important;
+        letter-spacing: 4px;
+        border-radius: 0;
+        font-family: Montserrat, sans-serif;
+    }
+
+        .navbar li a, .navbar .navbar-brand {
+            color: #fff !important;
+        }
+
+    .navbar-nav li a:hover, .navbar-nav li.active a {
+        color: #f4511e !important;
+        background-color: #fff !important;
+    }
     hr {
         -moz-border-bottom-colors: none;
         -moz-border-image: none;
