--- a/YourCourses/Views/Lectures/Index.cshtml
+++ b/YourCourses/Views/Lectures/Index.cshtml
@@ -30,10 +30,12 @@
             @Html.DisplayFor(modelItem => item.LectureName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.LectureId }, new { @class = "btn btn-primary" }) 
-            @Html.ActionLink("Details", "Details", new { id=item.LectureId }, new { @class = "btn btn-info" }) 
-            @Html.ActionLink("Delete", "Delete", new { id=item.LectureId }, new { @class = "btn btn-danger" })
-        </td>
+            <div class="btn-group-vertical">
+                @Html.ActionLink("Edit", "Edit", new { id = item.LectureId }, new { @class = "btn btn-primary" })
+                @Html.ActionLink("Details", "Details", new { id = item.LectureId }, new { @class = "btn btn-info" })
+                @Html.ActionLink("Delete", "Delete", new { id = item.LectureId }, new { @class = "btn btn-danger" })
+</div>
+</td>
     </tr>
 }
 
