--- a/YourCourses/Views/SubLectures/Edit.cshtml
+++ b/YourCourses/Views/SubLectures/Edit.cshtml
@@ -29,7 +29,7 @@ tinymce.init({
             ]
         });</script>
 </head>
-<h2>Edit</h2>
+<h2>Редактировать лекцию</h2>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <link rel="stylesheet" href="~/Scripts/latest (1)/minified/themes/default.min.css" />
 <script src="~/Scripts/latest (1)/minified/jquery.sceditor.bbcode.min.js"></script>
