--- a/YourCourses/Views/SubLectures/Index.cshtml
+++ b/YourCourses/Views/SubLectures/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@model IEnumerable<YourCourses.Models.SubLecture>
-
+﻿@model PagedList.IPagedList<YourCourses.Models.SubLecture>
+@using PagedList.Mvc;
 @{
     ViewBag.Title = "Index";
 }<br><br><br>
@@ -7,17 +7,24 @@
 <link rel="stylesheet" href="~/Content/style.css">
 
 <h2 class = "animated bounceInLeft">Index</h2>
-
+@using (Html.BeginForm("Index", "SubLectures", new { @class = "form-control" }))
+{
+    <div class="search">
+        <input type="search" name="q" placeholder="Поиск..." value="@ViewBag.SStr">
+        <input type="submit" value=">">
+    </div>
+}
+<br>
 <p>
     @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success animated bounceInLeft" })
 </p>
 <table class="table table-bordered animated zoomIn">
     <tr>
         <th class="success">
-            @Html.DisplayNameFor(model => model.LectureLectureId)
+            @Html.Label("Id модуля")
         </th>
         <th class="success">
-            @Html.DisplayNameFor(model => model.SubName)
+            @Html.Label("Название лекции")
         </th>
         <th class="active"></th>
     </tr>
@@ -32,12 +39,63 @@
                 @Html.DisplayFor(modelItem => item.SubName)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.SubId }, new { @class = "btn btn-primary" }) 
-                @*@Html.ActionLink("Details", "Details", new { id = item.SubId }, new { @class = "btn btn-info" })*@
-                @Html.ActionLink("Delete", "Delete", new { id = item.SubId }, new { @class = "btn btn-danger" })
-            </td>
+                <div class="btn-group-vertical">
+                    @Html.ActionLink("Edit", "Edit", new { id = item.SubId }, new { @class = "btn btn-primary" })
+                    @*@Html.ActionLink("Details", "Details", new { id = item.SubId }, new { @class = "btn btn-info" })*@
+                    @Html.ActionLink("Delete", "Delete", new { id = item.SubId }, new { @class = "btn btn-danger" })
+</div>
+</td>
         </tr>
     }
 
 </table>
+Страница @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) из @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+<style>
+    li {
+        float: left;
+        border-right: 0px solid #bbb;
+    }
+
+        li:last-child {
+            border-right: none;
+        }
+
+        li a {
+            display: block;
+            color: Black;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+            li a:hover:not(.active) {
+                background-color: #4CAF50;
+            }
+
+    .active {
+        background-color: #4CAF50;
+    }
+    .search {
+        width: 300px; /* Ширина поля с кнопкой */
+        border: 1px solid #000; /* Параметры рамки */
+        min-height: 20px; /* Минимальная высота */
+    }
+
+    input[type="search"] {
+        border: none; /* Убираем рамку */
+        outline: none; /* Убираем свечение в Chrome и Safari */
+        -webkit-appearance: none; /* Убираем рамку в Chrome и Safari */
+        width: 274px; /* Ширина поля */
+        vertical-align: middle; /* Выравнивание по середине */
+    }
+
+    input[type="submit"] {
+        width: 20px; /* Ширина кнопки */
+        height: 30px; /* Высота кнопки */
+        border: none; /* Убираем рамку */
+        background-color: burlywood; /* Параметры фона */
+    }
+</style>
 
